--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="hero">
         <div class="logo-links">
             <div class="logo">Header Logo</div>
-            <div class="header-links">
+            <div class="links">
                 <a href="#">header link one</a>
                 <a href="#">header link two</a>
                 <a href="#">header link three</a>
