index.html four pictures

--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
             <img href="file:///home/amykeloff/Downloads/dog-4372036_1280.jpg" alt="golden retriever puppy">
         </div>
     </div>
-    
+    <div class="info">
+        <header class="random-info">Some random  information</header>
+        <div class="pictures">
+            <div class="images">
+                <img src="" alt="pic one">
+                <ficaption>this is some subtext under and illustration or image</ficaption>
+            </div>
+            <div class="images">
+                <img src="" alt="pic two">
+                <ficaption>this is some subtext under and illustration or image</ficaption>
+            </div>
+            <div class="images">
+                <img src="" alt="pic three">
+                <ficaption>this is some subtext under and illustration or image</ficaption>
+            </div>
+            <div class="images">
+                <img src="" alt="pic four">
+                <ficaption>this is some subtext under and illustration or image</ficaption>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
