--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </div>
     <div class="quotation">
         <div class="quote">
-            <p> This is an inspiring quote, or a testimonial from a customer.
-                Maybe it's just fillin up space, or maybe people will actually
-                read it. Who knows? All I know is that it looks nice.</p>
+            <p> <em>This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually
+                read it. Who knows? All I know is that it looks nice.</em></p>
         </div>
         <div class="character">
             <p>-Thor, God of Thunder</p>
