--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
             <p>-Thor, God of Thunder</p>
         </div>
     </div>
-    <div class="action">
-        <div class="call-to-action">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <div class="action-button">
-            <button>Sign Up</button>
+    <div class="call">
+        <div class="action">
+            <div class="call-to-action">
+                <p>Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="action-button">
+                <button>Sign Up</button>
+            </div>
         </div>
     </div>
 </body>
